feat: add transaction (logic, unit tests and swagger documentation)
